bootstrap fini sur index_nocss et contact

--- a/index_nocss.html
+++ b/index_nocss.html
@@ -11,19 +11,20 @@
     <title>Jarditou - Des prix FOUS !</title>
 </head>
 
-<body><div class="container-fluid padding:15">
+<body><div class="container-fluid">
     <header>
-            <div class="row padding-15px">
-                <div class="col-md-12  col-lg-4">
+            <div class="row">
+                <div class="col-12 col-lg-4 text-center">
                     <img style="margin-bottom: 5px;" src="assets/img/jarditou_logo.jpg" width="300" height="90" alt="logo jarditou"
-                        title="logo jarditou">
+                        title="logo jarditou" class="img-responsive">
                 </div>
                 <div class="col-lg-8 text-center align-self-center">
                     <h3>Tout le jardin</h3>
                 </div>
             </div>
 <!--barre de menu-->
-            <nav id="navbar" class="navbar navbar-expand-sm bg-dark navbar-dark">
+            
+            <nav id="navbar" class="row no-gutter navbar navbar-expand-lg bg-dark navbar-dark ">
                 <!-- Toggler/collapsibe Button -->
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
@@ -43,8 +44,8 @@
                     </ul>
                 </div> 
             </nav>
-            <div class="row">
-                <img style="margin-bottom: 5px; margin-top: 5px;" class="col-12"src="assets/img/promotion.jpg" alt="promotion sur les lames de terrasse" title="promotion">
+            <div class="row no-gutter">
+                <img style="margin-bottom: 5px;" class="col-12" src="assets/img/promotion.jpg" alt="promotion sur les lames de terrasse" title="promotion">
             </div>
     </header>
 <!--contenu principal-->
@@ -74,15 +75,14 @@
                 Vous souhaitez un devis ? Nous vous le réalisons gratuitement.</p>
         </div>
 <!--colonne droite-->
-        <aside class="col d-none d-lg-block bg-secondary">
+        <aside class="d-none d-lg-block col-lg-4 bg-secondary">
             [ Colonne droite ]
         </aside>
     </div>
 
-
     <footer>
-        <nav id="navbar" class="navbar navbar-expand-sm bg-dark navbar-dark text-center">
-                <ul class="navbar-nav align-items-center">
+        <nav style="margin-top: 5px;" class="row no-gutter navbar navbar-expand-lg bg-dark navbar-dark text-center justify-content-center">
+                <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link" href="#mentionlegales">Mentions légales</a>
                     </li>
