--- a/tableau.html
+++ b/tableau.html
@@ -55,8 +55,8 @@
         </div>
     </header>
 
-    <div>
-        <table>
+    <div class="table-responsive">
+        <table class="table table-striped table-hover table-bordered">
             <thead>
                 <tr>
                     <td><h3>Photos</h3></td>
@@ -69,7 +69,7 @@
             </thead>
             <tbody>
                 <tr>
-                    <td><img src="assets/img/7.jpg" alt="barbecue aramis" title="barbecue-aramis"></td>
+                    <td><img class="img-fluid" src="assets/img/7.jpg" alt="barbecue aramis" title="barbecue-aramis"></td>
                     <td>7</td>
                     <td>Barbecues</td>
                     <td>Aramis</td>
@@ -77,7 +77,7 @@
                     <td>Brun</td>
                 </tr>
                 <tr>
-                    <td><img src="assets/img/8.jpg" alt="barbecue athos" title="barbecue-athos"></td>
+                    <td><img class="img-fluid" src="assets/img/8.jpg" alt="barbecue athos" title="barbecue-athos"></td>
                     <td>8</td>
                     <td>Barbecues</td>
                     <td>Athos</td>
@@ -85,7 +85,7 @@
                     <td>Noir</td>
                 </tr>
                 <tr>
-                    <td><img src="assets/img/11.jpg" alt="barbecue clatronic" title="barbecue-clatronic"></td>
+                    <td><img class="img-fluid" src="assets/img/11.jpg" alt="barbecue clatronic" title="barbecue-clatronic"></td>
                     <td>11</td>
                     <td>Barbecues</td>
                     <td>Clatronic</td>
@@ -93,7 +93,7 @@
                     <td>Chrome</td>
                 </tr>
                 <tr>
-                    <td><img src="assets/img/12.jpg" alt="barbecue camping" title="barbecue-camping"></td>
+                    <td><img class="img-fluid" src="assets/img/12.jpg" alt="barbecue camping" title="barbecue-camping"></td>
                     <td>12</td>
                     <td>Barbecues</td>
                     <td>Camping</td>
@@ -101,7 +101,7 @@
                     <td>Noir</td>
                 </tr>
                 <tr>
-                    <td><img src="assets/img/13.jpg" alt="brouette green" title="brouette-green"></td>
+                    <td><img class="img-fluid" src="assets/img/13.jpg" alt="brouette green" title="brouette-green"></td>
                     <td>13</td>
                     <td>Brouettes</td>
                     <td>Green</td>
@@ -113,7 +113,7 @@
     </div>
 
     <footer>
-        <nav style="margin-top: 5px;" id="navbar" class="navbar navbar-expand-lg bg-dark navbar-dark text-center justify-content-center">
+        <nav style="margin-top: 5px;" id="navbar" class="row no-gutter navbar navbar-expand-lg bg-dark navbar-dark text-center justify-content-center">
             <ul class="navbar-nav align-items-center">
                 <li class="nav-item">
                     <a class="nav-link" href="#mentionlegales">Mentions légales</a>
