--- a/contact.html
+++ b/contact.html
@@ -1,121 +1,147 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="style_2.css">
     <title>Jarditou - Contactez-nous !</title>
 </head>
-<body><div class="container-fluid">
-    <header>
-        <div class="row">
-            <div class="col-12 col-lg-4 text-center">
-                <img style="margin-bottom: 5px;" src="assets/img/jarditou_logo.jpg" width="300" height="90" alt="logo jarditou"
-                    title="logo jarditou" class="img-responsive">
-            </div>
-            <div class="col-lg-8 text-center align-self-center">
-                <h3>Tout le jardin</h3>
-            </div>
-        </div>
-<!--barre de menu-->
-        <nav id="navbar" class="row no-gutter navbar navbar-expand-lg bg-dark navbar-dark">
-            <!-- Toggler/collapsibe Button -->
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-            <span class="navbar-toggler-icon"></span>
-            </button>
-         
-            <div class="collapse navbar-collapse" id="collapsibleNavbar">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index_nocss.html">Accueil</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="tableau.html">Tableau</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Formulaire wazaa</a>
-                    </li>
-                </ul>
-            </div> 
-        </nav>
-        <div class="row no-gutter">
-            <img style="margin-bottom: 5px;" class="col-12"src="assets/img/promotion.jpg" alt="promotion sur les lames de terrasse" title="promotion">
-        </div>
-    </header>
-    <hr>
-    <section><h1>Contactez-nous !</h1></section>
 
-    <form action="http://bienvu.net/script.php" method="POST">
-        <p>* Ces zones sont obligatoires</p>
-        <fieldset>
-            <legend>Vos coordonnées</legend>
+<body>
+    <div class="container-fluid">
+        <header>
+            <div class="row">
+                <div class="col-12 col-lg-4 text-center">
+                    <img style="margin-bottom: 5px;" src="assets/img/jarditou_logo.jpg" width="300" height="90"
+                        alt="logo jarditou" title="logo jarditou" class="img-responsive">
+                </div>
+                <div class="col-lg-8 text-center align-self-center">
+                    <h3>Tout le jardin</h3>
+                </div>
+            </div>
+            <!--barre de menu-->
+            <nav id="navbar" class="row no-gutter navbar navbar-expand-lg bg-dark navbar-dark">
+                <!-- Toggler/collapsibe Button -->
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="index_nocss.html">Accueil</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="tableau.html">Tableau</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="contact.html">Contact</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+            <div class="row no-gutter">
+                <img style="margin-bottom: 5px;" class="col-12" src="assets/img/promotion.jpg"
+                    alt="promotion sur les lames de terrasse" title="promotion">
+            </div>
+        </header>
+        <hr>
+
+
+        <form class="container" action="http://bienvu.net/script.php" method="POST">
+            <section>
+                <h1>Contactez-nous !</h1>
+            </section>
+            <p>* Ces zones sont obligatoires</p>
+            <fieldset>
+                <legend>Vos coordonnées</legend>
                 <div class="form-group">
-                    <label for="nom">Votre nom* : </label> <input type="text" name="nom" id="nom" autofocus required>
+                    <label for="nom">Votre nom* : </label> <input class="form-control" type="text" name="nom" id="nom"
+                        autofocus required>
                 </div>
                 <div class="form-group">
-                    <label for="prenom">Votre prénom* : </label> <input type="text" name="prenom" id="prenom" required>
+                    <label for="prenom">Votre prénom* : </label> <input class="form-control" type="text" name="prenom"
+                        id="prenom" required>
                 </div>
                 <div class="form-group">
                     <label for="sexe">Sexe* : </label>
                 </div>
                 <div class="form-group">
-                    <input type="radio" name="sexe" value="feminin" id="sexe" required> Féminin <input type="radio" name="sexe" value="masculin" required> Masculin
+                    <input type="radio" name="sexe" value="feminin" id="sexe" required> Féminin <input type="radio"
+                        name="sexe" value="masculin" required> Masculin
                 </div>
                 <div class="form-group">
-                    <label for="ddn">Date de naissance* : </label> <input type="text" name="ddn" id="ddn" required placeholder="jj/mm/aaaa">
+                    <label for="ddn">Date de naissance* : </label> <input class="form-control" type="text" name="ddn"
+                        id="ddn" required placeholder="jj/mm/aaaa">
                 </div>
                 <div class="form-group">
-                    <label for="cp">Code Postal : </label> <input type="text" name="cp" id="cp">
+                    <label for="cp">Code Postal : </label> <input class="form-control" type="text" name="cp" id="cp">
                 </div>
                 <div class="form-group">
-                    <label for="adresse">Adresse : </label><input type="text" name="adresse" id="adresse">
+                    <label for="adresse">Adresse : </label><input class="form-control" type="text" name="adresse"
+                        id="adresse">
                 </div>
                 <div class="form-group">
-                    <label for="ville">Ville : </label><input type="text" name="ville" id="ville">
+                    <label for="ville">Ville : </label><input class="form-control" type="text" name="ville" id="ville">
                 </div>
                 <div class="form-group">
-                    <label for="email">E-mail* : </label><input type="email" name="email" id="email" required>
+                    <label for="email">E-mail* : </label><input class="form-control" type="email" name="email"
+                        id="email" required>
                 </div>
-        </fieldset>
-        <fieldset>
-            <legend>Votre demande</legend>
+            </fieldset>
+            <fieldset>
+                <legend>Votre demande</legend>
                 <div class="form-group">
-                <label for="sujet">Sujet* : </label><select name="sujet" id="sujet" required>
-                                                        <option value="" selected>----</option> 
-                                                        <option value="commandes" >Mes commandes</option>
-                                                        <option value="questionproduit">Questions sur un produit</option>
-                                                        <option value="reclamation"> Réclamation</option>
-                                                        <option value="autres">Autres</option>
-                                                    </select>
+                    <label for="sujet">Sujet* : </label><select class="form-control" name="sujet" id="sujet" required>
+                        <option value="" selected>----</option>
+                        <option value="commandes">Mes commandes</option>
+                        <option value="questionproduit">Questions sur un produit</option>
+                        <option value="reclamation"> Réclamation</option>
+                        <option value="autres">Autres</option>
+                    </select>
                 </div>
                 <div class="form-group"><label for="question">Votre question* : </label></div>
-                <div class="form-group"><textarea name="question" id="question" cols="40" rows="5" required></textarea></div>
-                
-        </fieldset>
-        <div>
-            <label for="consent"><input type="checkbox" name="consent" id="consent" required>J'accepte le traitement informatique de ce formulaire</label>
-        </div>
-        <button type="submit">Envoyer</button> <button type="reset">Annuler</button>
-    </form>
-    <footer>
-        <nav style="margin-top: 5px;" class="row no-gutter navbar navbar-expand-lg bg-dark navbar-dark text-center justify-content-center">
-            <ul class="navbar-nav align-items-center">
-                <li class="nav-item">
-                    <a class="nav-link" href="#mentionlegales">Mentions légales</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#horaires">Horaires</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#plandusite">Plan du site</a>
-                </li>
-            </ul>
-    </nav>
-    </footer>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script> 
-</div></body>
+                <div class="form-group"><textarea class="form-control" name="question" id="question" cols="40" rows="5"
+                        required></textarea></div>
+
+            </fieldset>
+            <div>
+                <label for="consent"><input type="checkbox" name="consent" id="consent" required>J'accepte le traitement
+                    informatique de ce formulaire</label>
+            </div>
+            <button type="submit">Envoyer</button> <button type="reset">Annuler</button>
+        </form>
+        <hr>
+        <footer>
+            <nav style="margin-top: 5px;"
+                class="row no-gutter navbar navbar-expand-lg bg-dark navbar-dark text-center justify-content-center">
+                <ul class="navbar-nav align-items-center">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#mentionlegales">Mentions légales</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#horaires">Horaires</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#plandusite">Plan du site</a>
+                    </li>
+                </ul>
+            </nav>
+        </footer>
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+        </script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+            integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous">
+        </script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+            integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous">
+        </script>
+    </div>
+</body>
+
 </html>
