--- a/index_nocss.html
+++ b/index_nocss.html
@@ -7,29 +7,30 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-        <link rel="stylesheet" href="style_2.css">
+    <link rel="stylesheet" href="style_2.css">
     <title>Jarditou - Des prix FOUS !</title>
 </head>
 
-<body><div class="container-fluid">
-    <header>
+<body>
+    <div class="container-fluid">
+        <header>
             <div class="row">
                 <div class="col-12 col-lg-4 text-center">
-                    <img style="margin-bottom: 5px;" src="assets/img/jarditou_logo.jpg" width="300" height="90" alt="logo jarditou"
+                    <img style="margin-bottom: 5px;" src="assets/img/jarditou_logo.jpg" alt="logo jarditou"
                         title="logo jarditou" class="img-responsive">
                 </div>
-                <div class="col-lg-8 text-center align-self-center">
+                <div class="col-lg-8">
                     <h3>Tout le jardin</h3>
                 </div>
             </div>
-<!--barre de menu-->
-            
+            <!--barre de menu-->
+
             <nav id="navbar" class="row no-gutter navbar navbar-expand-lg bg-dark navbar-dark ">
                 <!-- Toggler/collapsibe Button -->
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-                <span class="navbar-toggler-icon"></span>
+                    <span class="navbar-toggler-icon"></span>
                 </button>
-             
+
                 <div class="collapse navbar-collapse" id="collapsibleNavbar">
                     <ul class="navbar-nav">
                         <li class="nav-item">
@@ -39,49 +40,51 @@
                             <a class="nav-link" href="tableau.html">Tableau</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="contact.html">Formulaire wazaa</a>
+                            <a class="nav-link" href="contact.html">Contact</a>
                         </li>
                     </ul>
-                </div> 
+                </div>
             </nav>
             <div class="row no-gutter">
-                <img style="margin-bottom: 5px;" class="col-12" src="assets/img/promotion.jpg" alt="promotion sur les lames de terrasse" title="promotion">
+                <img style="margin-bottom: 5px;" class="col-12" src="assets/img/promotion.jpg"
+                    alt="promotion sur les lames de terrasse" title="promotion">
             </div>
-    </header>
-<!--contenu principal-->
-    <div class="row">
-        <div class="col-lg-8">
-<!--colonne gauche-->
-            <article>
-                <h1>Accueil</h1>
-            </article>
-            <hr>
-            <section>
-                <h3>L'entreprise</h3>
-            </section>
-            <p>Notre entreprise familiale met tout son savoir-faire à votre disposition dans le domaine du jardin et
-                du paysagisme.</p>
-            <p>Créée il y a 70 ans, notre entreprise vend fleurs, arbustes, matériel à main et motorisés.</p>
-            <p>Implantés à Amiens, nous intervenons dans tout le département de la Somme : Albert, Doullens,
-                Péronne, Abbeville, Corbie</p>
+        </header>
+        <!--contenu principal-->
+        <div class="row">
+            <div class="col-lg-8">
+                <!--colonne gauche-->
+                <article>
+                    <h1>Accueil</h1>
+                </article>
+                <hr>
+                <section>
+                    <h3>L'entreprise</h3>
+                </section>
+                <p>Notre entreprise familiale met tout son savoir-faire à votre disposition dans le domaine du jardin et
+                    du paysagisme.</p>
+                <p>Créée il y a 70 ans, notre entreprise vend fleurs, arbustes, matériel à main et motorisés.</p>
+                <p>Implantés à Amiens, nous intervenons dans tout le département de la Somme : Albert, Doullens,
+                    Péronne, Abbeville, Corbie</p>
 
-            <h3>Qualité</h3>
-            <p>Nous mettons à votre disposition un service personnalisé, avec 1 seul interlocuteur durant tout votre
-                projet.</p>
-            <p>Vous serez séduits par notre expertise, nos compétences et notre sérieux.</p>
+                <h3>Qualité</h3>
+                <p>Nous mettons à votre disposition un service personnalisé, avec 1 seul interlocuteur durant tout votre
+                    projet.</p>
+                <p>Vous serez séduits par notre expertise, nos compétences et notre sérieux.</p>
 
-            <h3>Devis gratuit</h3>
-            <p>Vous pouvez bien sûr contacter pour de plus amples informations ou pour une demande d'intervention.
-                Vous souhaitez un devis ? Nous vous le réalisons gratuitement.</p>
+                <h3>Devis gratuit</h3>
+                <p>Vous pouvez bien sûr contacter pour de plus amples informations ou pour une demande d'intervention.
+                    Vous souhaitez un devis ? Nous vous le réalisons gratuitement.</p>
+            </div>
+            <!--colonne droite-->
+            <aside class="d-none d-lg-block col-lg-4 bg-secondary">
+                [ Colonne droite ]
+            </aside>
         </div>
-<!--colonne droite-->
-        <aside class="d-none d-lg-block col-lg-4 bg-secondary">
-            [ Colonne droite ]
-        </aside>
-    </div>
 
-    <footer>
-        <nav style="margin-top: 5px;" class="row no-gutter navbar navbar-expand-lg bg-dark navbar-dark text-center justify-content-center">
+        <footer>
+            <nav style="margin-top: 5px;"
+                class="row no-gutter navbar navbar-expand-lg bg-dark navbar-dark text-center justify-content-center">
                 <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link" href="#mentionlegales">Mentions légales</a>
@@ -93,18 +96,19 @@
                         <a class="nav-link" href="#plandusite">Plan du site</a>
                     </li>
                 </ul>
-        </nav>
-    </footer>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-        crossorigin="anonymous"></script>
+            </nav>
+        </footer>
     </div>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous">
+    </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous">
+    </script>
+
 </body>
 
 </html>
