perfection indentation + commentaires

--- a/contact.html
+++ b/contact.html
@@ -50,12 +50,12 @@
             </div>
         </header>
         <hr>
-
-
+        <!--formulaire-->
         <form class="container" action="http://bienvu.net/script.php" method="POST">
             <section>
-                <h1>Contactez-nous !</h1>
+                <h2>Contactez-nous !</h2>
             </section>
+
             <p>* Ces zones sont obligatoires</p>
             <fieldset>
                 <legend>Vos coordonnées</legend>
@@ -116,6 +116,7 @@
             <button type="submit">Envoyer</button> <button type="reset">Annuler</button>
         </form>
         <hr>
+        <!--menu footer-->
         <footer>
             <nav style="margin-top: 5px;"
                 class="row no-gutter navbar navbar-expand-lg bg-dark navbar-dark text-center justify-content-center">
@@ -132,6 +133,7 @@
                 </ul>
             </nav>
         </footer>
+        <!--script bootstrap-->
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
             integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
         </script>
