--- a/tableau.html
+++ b/tableau.html
@@ -61,7 +61,7 @@
                     alt="promotion sur les lames de terrasse" title="promotion">
             </div>
         </header>
-
+        <!--tableau-->
         <div class="table-responsive">
             <table class="table table-striped table-hover table-bordered">
                 <thead>
@@ -123,9 +123,9 @@
                 </tbody>
             </table>
         </div>
-
+        <!--menu footer-->
         <footer>
-            <nav style="margin-top: 5px;" id="navbar"
+            <nav style="margin-top: 5px;"
                 class="row no-gutter navbar navbar-expand-lg bg-dark navbar-dark text-center justify-content-center">
                 <ul class="navbar-nav align-items-center">
                     <li class="nav-item">
@@ -140,6 +140,7 @@
                 </ul>
             </nav>
         </footer>
+        <!--script bootstrap-->
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
             integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
         </script>
