--- a/index_nocss.html
+++ b/index_nocss.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="style_2.css">
-    <title>Jarditou - Des prix FOUS !</title>
+    <title>Jarditou - Des prix FOUS</title>
 </head>
 
 <body>
@@ -19,7 +19,7 @@
                     <img style="margin-bottom: 5px;" src="assets/img/jarditou_logo.jpg" alt="logo jarditou"
                         title="logo jarditou" class="img-responsive">
                 </div>
-                <div class="col-lg-8">
+                <div class="col-lg-8 text-center align-self-center">
                     <h3>Tout le jardin</h3>
                 </div>
             </div>
@@ -61,19 +61,24 @@
                 <section>
                     <h3>L'entreprise</h3>
                 </section>
-                <p>Notre entreprise familiale met tout son savoir-faire à votre disposition dans le domaine du jardin et
+                <p class="body">Notre entreprise familiale met tout son savoir-faire à votre disposition dans le
+                    domaine du jardin et
                     du paysagisme.</p>
-                <p>Créée il y a 70 ans, notre entreprise vend fleurs, arbustes, matériel à main et motorisés.</p>
-                <p>Implantés à Amiens, nous intervenons dans tout le département de la Somme : Albert, Doullens,
+                <p class="body">Créée il y a 70 ans, notre entreprise vend fleurs, arbustes, matériel à main et
+                    motorisés.</p>
+                <p class="body">Implantés à Amiens, nous intervenons dans tout le département de la Somme : Albert,
+                    Doullens,
                     Péronne, Abbeville, Corbie</p>
 
                 <h3>Qualité</h3>
-                <p>Nous mettons à votre disposition un service personnalisé, avec 1 seul interlocuteur durant tout votre
+                <p class="body">Nous mettons à votre disposition un service personnalisé, avec 1 seul interlocuteur
+                    durant tout votre
                     projet.</p>
-                <p>Vous serez séduits par notre expertise, nos compétences et notre sérieux.</p>
+                <p class="body">Vous serez séduits par notre expertise, nos compétences et notre sérieux.</p>
 
                 <h3>Devis gratuit</h3>
-                <p>Vous pouvez bien sûr contacter pour de plus amples informations ou pour une demande d'intervention.
+                <p class="body">Vous pouvez bien sûr contacter pour de plus amples informations ou pour une demande
+                    d'intervention.
                     Vous souhaitez un devis ? Nous vous le réalisons gratuitement.</p>
             </div>
             <!--colonne droite-->
@@ -81,7 +86,8 @@
                 [ Colonne droite ]
             </aside>
         </div>
-
+        <hr>
+        <!--menu footer-->
         <footer>
             <nav style="margin-top: 5px;"
                 class="row no-gutter navbar navbar-expand-lg bg-dark navbar-dark text-center justify-content-center">
@@ -98,17 +104,18 @@
                 </ul>
             </nav>
         </footer>
-    </div>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-    </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous">
-    </script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous">
-    </script>
 
+        <!--script bootstrap-->
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+        </script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+            integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous">
+        </script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+            integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous">
+        </script>
+    </div>
 </body>
 
 </html>
