input limit date de naissance formulaire

--- a/contact.html
+++ b/contact.html
@@ -76,7 +76,7 @@
                 </div>
                 <div class="form-group">
                     <label for="ddn">Date de naissance* : </label> <input class="form-control" type="text" name="ddn"
-                        id="ddn" required placeholder="jj/mm/aaaa">
+                        id="ddn" maxlength="10" required placeholder="jj/mm/aaaa">
                 </div>
                 <div class="form-group">
                     <label for="cp">Code Postal : </label> <input class="form-control" type="text" name="cp" id="cp">
