--- a/index_nocss.html
+++ b/index_nocss.html
@@ -61,23 +61,23 @@
                 <section>
                     <h3>L'entreprise</h3>
                 </section>
-                <p class="body">Notre entreprise familiale met tout son savoir-faire à votre disposition dans le
+                <p>Notre entreprise familiale met tout son savoir-faire à votre disposition dans le
                     domaine du jardin et
                     du paysagisme.</p>
-                <p class="body">Créée il y a 70 ans, notre entreprise vend fleurs, arbustes, matériel à main et
+                <p>Créée il y a 70 ans, notre entreprise vend fleurs, arbustes, matériel à main et
                     motorisés.</p>
-                <p class="body">Implantés à Amiens, nous intervenons dans tout le département de la Somme : Albert,
+                <p>Implantés à Amiens, nous intervenons dans tout le département de la Somme : Albert,
                     Doullens,
                     Péronne, Abbeville, Corbie</p>
 
                 <h3>Qualité</h3>
-                <p class="body">Nous mettons à votre disposition un service personnalisé, avec 1 seul interlocuteur
+                <p>Nous mettons à votre disposition un service personnalisé, avec 1 seul interlocuteur
                     durant tout votre
                     projet.</p>
-                <p class="body">Vous serez séduits par notre expertise, nos compétences et notre sérieux.</p>
+                <p>Vous serez séduits par notre expertise, nos compétences et notre sérieux.</p>
 
                 <h3>Devis gratuit</h3>
-                <p class="body">Vous pouvez bien sûr contacter pour de plus amples informations ou pour une demande
+                <p>Vous pouvez bien sûr contacter pour de plus amples informations ou pour une demande
                     d'intervention.
                     Vous souhaitez un devis ? Nous vous le réalisons gratuitement.</p>
             </div>
