--- a/index_bs.html
+++ b/index_bs.html
@@ -34,7 +34,7 @@
                 <div class="collapse navbar-collapse" id="collapsibleNavbar">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="index_nocss.html">Accueil</a>
+                            <a class="nav-link" href="index_bs.html">Accueil</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="tableau.html">Tableau</a>
