--- a/tableau.html
+++ b/tableau.html
@@ -45,7 +45,7 @@
                 <div class="collapse navbar-collapse" id="collapsibleNavbar">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="index_nocss.html">Accueil</a>
+                            <a class="nav-link" href="index_bs.html.html">Accueil</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="tableau.html">Tableau</a>
