--- a/contact.html
+++ b/contact.html
@@ -78,11 +78,11 @@
 
                     <div class="btn-group-toggle" data-toggle="buttons">
                         <label class="btn btn-outline-secondary">
-                            <input type="radio" name="genre" value="f" id="feminin">
+                            <input type="radio" name="genre" value="F" id="feminin">
                             Féminin
                         </label>
                         <label class="btn btn-outline-secondary">
-                            <input type="radio" name="genre" value="m" id="masculin">
+                            <input type="radio" name="genre" value="M" id="masculin">
                             Masculin
                         </label>
                     </div>
